--- a/config.ini
+++ b/config.ini
@@ -26,11 +26,15 @@ UPLOAD_PRIVATE = UPLOAD_PRIVATE
 DOWNLOAD_SERVER_PUBLIC = DOWNLOAD_SERVER_PUBLIC
 UPLOAD_FOR_SHARING = UPLOAD_FOR_SHARE
 LIST_SHARED = LIST_SHARED
+LIST_PRIVATE = LIST_PRIVATE
 DOWNLOAD_SHARED = DOWNLOAD_SHARED
+DOWNLOAD_PRIVATE = DOWNLOAD_PRIVATE
 REGISTER = REGISTER
 LOGIN = LOGIN
 LOGOUT = LOGOUT
 MAKE_PUBLIC_ADMIN = MAKE_PUBLIC_ADMIN
+MAKE_PUBLIC_USER = MAKE_PUBLIC_USER
+MAKE_SHARED_USER = MAKE_SHARED_USER
 QUIT = QUIT
 
 [RESPONSES]
@@ -42,13 +46,17 @@ REGISTER_SUCCESS = REGISTER_SUCCESS
 REGISTER_FAILED = REGISTER_FAILED
 LOGIN_SUCCESS = LOGIN_SUCCESS
 LOGIN_FAILED = LOGIN_FAILED
+PRIVATE_LIST = PRIVATE_LIST
 LOGOUT_SUCCESS = LOGOUT_SUCCESS
 AUTH_REQUIRED = AUTH_REQUIRED
 PERMISSION_DENIED = PERMISSION_DENIED
 ADMIN_PUBLIC_SUCCESS = ADMIN_PUBLIC_SUCCESS
 ADMIN_PUBLIC_FAILED = ADMIN_PUBLIC_FAILED
+USER_PUBLIC_SUCCESS = USER_PUBLIC_SUCCESS
+USER_SHARED_SUCCESS = USER_SHARED_SUCCESS
 INVALID_SESSION = INVALID_SESSION
 NO_FILES_SHARED = NO_FILES_SHARED
+NO_FILES_PRIVATE = NO_FILES_PRIVATE
 SHARED_LIST = SHARED_LIST
 FILE_NOT_FOUND = FILE_NOT_FOUND
 ERROR = ERROR
