Added public file deletion for admins, file records in the database, etc.

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 DOWNLOAD_DIR = downloads
 NGROK_AUTODETECT_ENABLED = True
 FALLBACK_SERVER_HOST = 127.0.0.1
-FALLBACK_SERVER_PORT = 8080      
+FALLBACK_SERVER_PORT = 8080   
 
 [SERVER]
 HOST = 0.0.0.0
@@ -24,7 +24,9 @@ DB_PASSWORD = ''
 [COMMANDS]
 UPLOAD_PRIVATE = UPLOAD_PRIVATE
 DOWNLOAD_SERVER_PUBLIC = DOWNLOAD_SERVER_PUBLIC
+UPLOAD_PUBLIC = UPLOAD_PUBLIC
 UPLOAD_FOR_SHARING = UPLOAD_FOR_SHARE
+LIST_PUBLIC = LIST_PUBLIC
 LIST_SHARED = LIST_SHARED
 LIST_PRIVATE = LIST_PRIVATE
 DOWNLOAD_SHARED = DOWNLOAD_SHARED
@@ -35,13 +37,13 @@ LOGOUT = LOGOUT
 MAKE_PUBLIC_ADMIN = MAKE_PUBLIC_ADMIN
 MAKE_PUBLIC_USER = MAKE_PUBLIC_USER
 MAKE_SHARED_USER = MAKE_SHARED_USER
+ADMIN_DELETE_FILE = ADMIN_DELETE_FILE
 QUIT = QUIT
 
 [RESPONSES]
 READY_FOR_DATA = READY_FOR_FILE_DATA
 UPLOAD_SUCCESS = UPLOAD_SUCCESS
 UPLOAD_FAILED = UPLOAD_FAILED
-UPLOAD_DONE = UPLOAD_DONE
 REGISTER_SUCCESS = REGISTER_SUCCESS
 REGISTER_FAILED = REGISTER_FAILED
 LOGIN_SUCCESS = LOGIN_SUCCESS
@@ -56,9 +58,14 @@ USER_PUBLIC_SUCCESS = USER_PUBLIC_SUCCESS
 USER_SHARED_SUCCESS = USER_SHARED_SUCCESS
 INVALID_SESSION = INVALID_SESSION
 NO_FILES_SHARED = NO_FILES_SHARED
+NO_FILES_PUBLIC = NO_FILES_PUBLIC
 NO_FILES_PRIVATE = NO_FILES_PRIVATE
 SHARED_LIST = SHARED_LIST
+LIST_SUCCESS = LIST_SUCCESS
+LIST_FAILED = LIST_FAILED
 FILE_NOT_FOUND = FILE_NOT_FOUND
+ADMIN_DELETE_SUCCESS = ADMIN_DELETE_SUCCESS
+ADMIN_DELETE_FAILED = ADMIN_DELETE_FAILED
 ERROR = ERROR
 DOWNLOAD_READY = DOWNLOAD_READY
 DOWNLOAD_COMPLETE = DOWNLOAD_COMPLETE
@@ -66,3 +73,4 @@ DOWNLOAD_COMPLETE = DOWNLOAD_COMPLETE
 [LOGGING]
 LEVEL = INFO
 FORMAT = %(asctime)s - %(levelname)s - %(message)s
+SERVER_LOG_FILE = app.log
