client side refactor complete

--- a/config.ini
+++ b/config.ini
@@ -37,6 +37,7 @@ LOGOUT = LOGOUT
 MAKE_PUBLIC_ADMIN = MAKE_PUBLIC_ADMIN
 MAKE_PUBLIC_USER = MAKE_PUBLIC_USER
 MAKE_SHARED_USER = MAKE_SHARED_USER
+DELETE_FILE = DELETE_FILE
 ADMIN_DELETE_FILE = ADMIN_DELETE_FILE
 QUIT = QUIT
 
@@ -64,6 +65,8 @@ SHARED_LIST = SHARED_LIST
 LIST_SUCCESS = LIST_SUCCESS
 LIST_FAILED = LIST_FAILED
 FILE_NOT_FOUND = FILE_NOT_FOUND
+DELETE_SUCCESS = DELETE_SUCCESS
+DELETE_FAILED = DELETE_FAILED
 ADMIN_DELETE_SUCCESS = ADMIN_DELETE_SUCCESS
 ADMIN_DELETE_FAILED = ADMIN_DELETE_FAILED
 ERROR = ERROR
