fixed all server/client incompatibility issues, .env missing issue, and list issues

--- a/config.ini
+++ b/config.ini
@@ -23,9 +23,9 @@ DB_PASSWORD = ''
 
 [COMMANDS]
 UPLOAD_PRIVATE = UPLOAD_PRIVATE
-DOWNLOAD_SERVER_PUBLIC = DOWNLOAD_SERVER_PUBLIC
+DOWNLOAD_PUBLIC = DOWNLOAD_PUBLIC
 UPLOAD_PUBLIC = UPLOAD_PUBLIC
-UPLOAD_FOR_SHARING = UPLOAD_FOR_SHARE
+UPLOAD_FOR_SHARING = UPLOAD_FOR_SHARING
 LIST_PUBLIC = LIST_PUBLIC
 LIST_SHARED = LIST_SHARED
 LIST_PRIVATE = LIST_PRIVATE
