--- a/server_config.ini
+++ b/server_config.ini
@@ -1,9 +1,3 @@
-[CLIENT]
-DOWNLOAD_DIR = downloads
-NGROK_AUTODETECT_ENABLED = True
-FALLBACK_SERVER_HOST = 127.0.0.1
-FALLBACK_SERVER_PORT = 8080   
-
 [SERVER]
 HOST = 0.0.0.0
 PORT = 8080
@@ -19,7 +13,7 @@ SHARED_UPLOADS_DIR = shared_uploads
 DB_NAME = ftp_users
 DB_USER = root
 DB_HOST = localhost
-DB_PASSWORD = ''
+DB_PASSWORD = 
 
 [COMMANDS]
 UPLOAD_PRIVATE = UPLOAD_PRIVATE
