finished and verified resumption logic

--- a/server_config.ini
+++ b/server_config.ini
@@ -64,6 +64,7 @@ DELETE_FAILED = DELETE_FAILED
 ADMIN_DELETE_SUCCESS = ADMIN_DELETE_SUCCESS
 ADMIN_DELETE_FAILED = ADMIN_DELETE_FAILED
 ERROR = ERROR
+UNKNOWN_COMMAND = UNKNOWN_COMMAND
 DOWNLOAD_READY = DOWNLOAD_READY
 DOWNLOAD_COMPLETE = DOWNLOAD_COMPLETE
 
